--- a/index.htm
+++ b/index.htm
@@ -1,108 +1,63 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<title>Home</title>
-<style>
-<!--
-p.MsoBodyText, li.MsoBodyText, div.MsoBodyText {
-	text-indent:0pt;
-	line-height:125%;
-	text-align:left;
-	font-family:Arial;
-	font-size:9.0pt;
-	color:navy;
-}
-p.MsoAccentText, li.MsoAccentText, div.MsoAccentText {
-	text-indent:0pt;
-	line-height:113%;
-	text-align:left;
-	font-family:Arial;
-	font-size:8.0pt;
-	color:navy;
-	font-weight:bold;
-}
-p.MsoOrganizationName, li.MsoOrganizationName, div.MsoOrganizationName {
-	text-indent:0pt;
-	line-height:113%;
-	text-align:left;
-	font-family:Arial;
-	font-size:12.0pt;
-	color:white;
-	font-weight:bold;
-}
-p.MsoAddress, li.MsoAddress, div.MsoAddress {
-	text-indent:0pt;
-	line-height:113%;
-	text-align:left;
-	font-family:Arial;
-	font-size:8.0pt;
-	color:navy;
-}
-p.MsoTitle3, li.MsoTitle3, div.MsoTitle3 {
-	text-indent:0pt;
-	line-height:113%;
-	text-align:left;
-	font-family:"Arial Black";
-	font-size:16.0pt;
-	color:#005BAC
-}
--->
-</style>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Untitled Document</title>
+<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
-<body link=blue vlink=red>
-<div style='position:absolute;width:10.-2040in;height:13.-1560in'> <span style='position:absolute;z-index:1;
-left:683px;top:736px;width:302px;height:200px'><img width=302 height=200
-src="images/image5631.jpg" v:shapes="_x0000_s1025"></span><span style='position:absolute;z-index:2;
-left:201px;top:178px;width:476px;height:755px'><img width=476 height=755
-src="images/image358.png"
-alt="Text Box: Welcome to Ruffing Martial Arts . &#13;&#13;Delaware, Lewis Center and Powell’s Premier Martial Arts School.&#13;&#13;Ruffing Martial Arts is a comprehensive martial arts school. Master Ruffing has trained in Tang Soo Do, Hap Ki Do and other Korean arts and has developed Tang Soo Do from his experiences training in Korea and throughout the U.S.. His art is a complete art using all aspects of martial art including both hard (Strikes/ linear) and soft techniques (circular/throws). &#13;    &#13;Our professional instruction is designed to provide you with our unique mental and physical coordination that Tang Soo Do demands. Also, you will find that our classes stress the development of individual character, integrity, and respect for others.&#13;    &#13;As a student, you will learn a great deal of information and knowledge that has been passed down through generations of warriors. Our school is unique and not like your average karate or generic martial arts school. We have high standards and we seek perfection of technique. Master Ruffing and your fellow students at the academy will help you every step of the way. I personally invite you to join our academy and experience authentic martial arts training.&#13;"
-v:shapes="_x0000_s1026"></span><span style='position:absolute;z-index:7;
-left:0px;top:0px;width:61px;height:1056px'><img width=61 height=1056
-src="images/image321.png" v:shapes="_x0000_s1082"></span><span style='position:absolute;
-z-index:8;left:12px;top:212px;width:180px;height:302px'>
-  <map
-name=MicrosoftOfficeMap0>
-    <area shape=Rect
-coords="0, 269, 180, 302" href="images/images/Page720.htm">
-    <area
-shape=Rect coords="0, 235, 180, 269" href="guide.htm">
-    <area
-shape=Rect coords="0, 202, 180, 235" href="guide.htm">
-    <area
-shape=Rect coords="0, 168, 180, 202" href="special.htm">
-    <area
-shape=Rect coords="0, 134, 180, 168" href="schedule.htm">
-    <area
-shape=Rect coords="0, 101, 180, 134" href="programs.htm">
-    <area
-shape=Rect coords="0, 67, 180, 101" href="contact.htm">
-    <area
-shape=Rect coords="0, 34, 180, 67" href="aboutus.htm">
-  </map>
-  <img
-border=0 width=180 height=302 src="images/image327.png"
-usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1083 _x0000_s1085 _x0000_s1086 _x0000_s1087 _x0000_s1088 _x0000_s1089 _x0000_s1090 _x0000_s1091 _x0000_s1092 _x0000_s1093 _x0000_s1094 _x0000_s1095 _x0000_s1096 _x0000_s1097 _x0000_s1098 _x0000_s1099 _x0000_s1100 _x0000_s1101 _x0000_s1102 _x0000_s1103 _x0000_s1104 _x0000_s1105 _x0000_s1106 _x0000_s1107 _x0000_s1108 _x0000_s1109 _x0000_s1110"></span><span style='position:absolute;z-index:76;
-left:679px;top:447px;width:306px;height:179px'><img width=306 height=179
-src="images/image7621.jpg" v:shapes="_x0000_s1400"></span><span style='position:absolute;z-index:81;
-left:678px;top:176px;width:306px;height:188px'><img width=306 height=188
-src="images/image7331.jpg" v:shapes="_x0000_s1405"></span><span style='position:absolute;
-z-index:82;left:0px;top:0px;width:986px;height:179px'><img width=986
-height=179 src="images/image558.png" v:shapes="_x0000_s1406 _x0000_s1407 _x0000_s1408 _x0000_s1409 _x0000_s1410 _x0000_s1411 _x0000_s1412 _x0000_s1413 _x0000_s1414 _x0000_s1415 _x0000_s1416"></span><span style='position:absolute;z-index:83;
-left:699px;top:332px;width:266px;height:22px'><img width=266 height=22
-src="images/image615.png"
-alt="Master Ruffing In Tucson, AZ Mountains" v:shapes="_x0000_s1417"></span><span style='position:absolute;z-index:84;
-left:735px;top:603px;width:191px;height:21px'><img width=191 height=21
-src="images/image422.png" alt="Master Ruffing Scissor Kick"
-v:shapes="_x0000_s1418"></span><span style='position:absolute;z-index:85;
-left:199px;top:1191px;width:787px;height:4px'><img width=787 height=4
-src="images/image322.png" v:shapes="_x0000_s1419"></span><span style='position:absolute;
-z-index:86;left:199px;top:1227px;width:622px;height:96px'><img width=622
-height=96 src="images/image337.png" v:shapes="_x0000_s1420 _x0000_s1422"></span><span style='position:absolute;
-z-index:87;left:200px;top:969px;width:404px;height:220px'><img width=404
-height=220 src="images/image616.png" v:shapes="_x0000_s1423 _x0000_s1424 _x0000_s1425 _x0000_s1426"></span><span style='position:absolute;z-index:88;
-left:799px;top:911px;width:96px;height:22px'><img width=96 height=22
-src="images/image423.png" alt=Respect v:shapes="_x0000_s1427"></span><span style='position:absolute;z-index:110;
-left:48px;top:560px;width:106px;height:373px'><img width=106 height=373
-src="images/image3651.png" v:shapes="_x0000_s1449"></span> </div>
+<body class="thrColElsHdr">
+<div id="container">
+  <div id="header">
+  <div id="logo"></div>
+  <div id="rightImage"></div>
+  <!-- end #header --></div>
+  <div id="sidebar1">
+  <ul>
+  	<li><a href="index.htm">Home</a></li>
+    <li><a href="aboutus.htm">About Us</a></li>
+    <li><a href="contact.htm">Location & Contact</a></li>
+    <li><a href="programs.htm">Programs</a></li>
+    <li><a href="schedule.htm">Schedule</a></li>
+    <li><a href="special.htm">Special</a></li>
+    <li><a href="masterWilliam.htm">Master Instructor</a></li>
+    <li><a href="guide.htm">FAQ's</a></li>
+    <li><a href="media.htm">Media Converage</a></li>
+  </ul>
+  <div id="wordArt">
+    
+</div>
+  <!-- end #sidebar1 --></div>
+  <div id="sidebar2">
+    <img src="images/image7331.jpg" width="306" height="188">
+  <p>Master Ruffing <br />
+    Tuscon, AZ Mountains</p>
+  <img src="images/image7621.jpg" width="306" height="188">
+  <p>Master Ruffing <br />
+  Scissor Kick</p>
+  <img src="images/image5631.jpg" width="306" height="188">
+  <p>Respect</p>
+  
+  
+  <!-- end #sidebar2 -->
+  </div>
+  <p>&nbsp;</p>
+  <div id="mainContent">
+    <h1 class="thrColElsHdr">Home</h1>
+    <p>Welcome to Ruffing Martial Arts. </p>
+    <p>Delaware, Lewis Center and Powellâ€™s Premier Martial Arts School. Ruffing Martial Arts is a comprehensive martial arts school. Master Ruffing has trained in Tang Soo Do, Hap Ki Do and other Korean arts and has developed Tang Soo Do from his experiences training in Korea and throughout the U.S. His art is a complete art using all aspects of martial art including both hard (Strikes/ linear) and soft techniques (circular/throws). Our professional instruction is designed to provide you with our unique mental and physical coordination that Tang Soo Do demands. Also, you will find that our classes stress the development of individual character, integrity, and respect for others. </p>
+    <p>As a student, you will learn a great deal of information and knowledge that has been passed down through generations of warriors. Our school is unique and not like your average karate or generic martial arts school. We have high standards and we seek perfection of technique. Master Ruffing and your fellow students at the academy will help you every step of the way. I personally invite you to join our academy and experience authentic martial arts training.    </p>
+    <p>Contact Us:</p>
+    <p>Ruffing Martial Arts<br />
+    4 Troy Road<br />
+    Delaware, OH 43015<br />
+    (740) 833-6723</p>
+    <p>Email: <a href="mailto:masterruffing@ruffingmartialarts.com">masterruffing@ruffingmartialarts.com</a></p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+  <p>&nbsp;</p></div>
+  <div id="footer">
+    <p><a href="index.htm">Home</a> | <a href="aboutus.htm">About Us</a> | <a href="contact.htm">Contact Us</a> | <a href="programs.htm">Programs</a> | <a href="schedule.htm">Schedule </a>| <a href="masterWilliam.htm">Master/Instructor</a> | <a href="guide.htm">FAQ's</a> | <a href="media.htm">Media Coverage</a></p>
+  <!-- end #footer --></div>
+<!-- end #container --></div>
 </body>
 </html>
